--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000",
+  "proxy": "https://notebook-backend-b94c.onrender.com",
   "homepage": "https://shiridharKhatri.github.io/e-notebook",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
